
syntax = "proto3";

package descarteslabs.workflows;

message VizOption {
  // name for the set of parameters, must be unique within any list.
  string id = 1;

  // names of bands to select.
  repeated string bands = 2;
  // true if missing pixels should use checkerboard pattern.
  bool checkerboard = 3;
  // colormap name (only if single band).
  string colormap = 4;
  // reduction method
  string reduction = 5;
  // scales as list of list of float, empty or item count equal to that of bands.
  message Scales {
    double min = 1;
    double max = 2;
  }
  repeated Scales scales = 6;

  // description for human consumption.
  string description = 7;
}
